kubernetes/overlays/dev/patch-service-temp.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-app
  namespace: tekton
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
